# ROS_projects

./: LICENSE  README.md
hydra_one_description/: CMakeLists.txt  hydra_one_tf_tree.gv  package.xml
hydra_one_description/config/: hydra_one_control_GOOD_COPY.yaml
hydra_one_description/launch/: Main.launch  hydra_one_control.launch  urdf_visualize.launch
hydra_one_description/rviz_config/: hydra_one.rviz
hydra_one_description/scripts/: hydra_one_move.py  inertia_calculator.py
hydra_one_description/urdf/: hydra_one.gv  hydra_one.urdf  hydra_one_Effort_Controller.urdf  hydra_one_NoSensors.urdf  hydra_one_VelocityController.urdf  hydra_one_WithSensors.urdf
hydra_one_description/worlds/: Cafe_actors.world  ISCAS_museum_actors.world
hydra_one_navigation/: CMakeLists.txt  hydra_one_tfTree_withgmappingRun.gv  package.xml
hydra_one_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
hydra_one_navigation/launch/: amcl_launch.launch  amcl_plus_map_server.launch  get_pose_service.launch  gmapping_launch.launch  move_base_launch.launch  navigation_main.launch  provide_map.launch
hydra_one_navigation/maps/: ISCAS_museum_2d.pgm  ISCAS_museum_2d.yaml  cafe2d.pgm  cafe2d.yaml
hydra_one_navigation/rviz_config/: hydra_one_loc.rviz  hydra_one_nav.rviz  hydra_one_pathplanning.rviz
hydra_one_navigation/scripts/: get_pose_service.py  init_particles_caller.py  make_plan_caller.py  square_move.py
socially_compliant_bot/: CMakeLists.txt  package.xml
socially_compliant_bot/launch/: launch_cafe_world.launch  spawn_summit_xl.launch  spawn_urdf.launch  urdf_visualize.launch
socially_compliant_bot/rviz_config/: summit_xl.rviz
socially_compliant_bot/urdf/: summit_xl.gv  summit_xl.urdf
socially_compliant_bot/worlds/: ISCAS_museum_actors.world
socially_compliant_navigation/: CMakeLists.txt  package.xml
socially_compliant_navigation/config/: hydra_one_control.yaml
socially_compliant_navigation/launch/: Main.launch  hydra_one_gazebo_ros_control.launch
socially_compliant_navigation/models/hydra_one/meshes/base/: hydra_base_frame.dae
socially_compliant_navigation/urdf/: hydra_one_NoSensors_gazebo_ros_control_plugin.urdf  hydra_one_WithSensors_planar_move_plugin.urdf
socially_compliant_navigation/worlds/: Cafe_actors.world
